@startuml TPA1-Clases
skinparam linetype ortho

class LineaDeTransporte {
  estaciones: List<Estaciones>
  tipoDeTransporte: TipoDeTransporte
  --
  Estacion estacionOrigen()
  Estacion estacionDestino()
}

enum TipoDeTransporte {
  SUBTERRANEO
  FERROCARRIL
}

class Estacion {
  nombre: String
  ubicacion: String
  servicios: List<Servicio>
  --
  agregarServicio(Servicio)
  removerServicio(Servicio)
}

class Comunidad {
  --
  crearServicio()
}

class Usuario {
  usuario: String
  contraseña: String
  nombre: String
  apellido: String
  correoElectronico: String
  membresias: List<Membresia>
}

class Membresia {
  comunidad: Comunidad
  esAdministrador: Boolean
}

class Servicio {
  descripcion: String
  tipoDeServicio: TipoDeServicio
}

enum TipoDeServicio {
  ESCALERAS_MECANICAS
  ASCENSORES
  BAÑOS
}

Estacion -> Servicio
Servicio -> TipoDeServicio
Comunidad ..> Servicio
Usuario --> Membresia
Comunidad <- Membresia
LineaDeTransporte --> Estacion
TipoDeTransporte <-- LineaDeTransporte
@enduml